<resources>
    <string name="app_name">A5_CalculadoraCheckB</string>
    <string name="numero1">Ingrese numero 1 a operar</string>
    <string name="numero2">Ingrese numero 2 a operar</string>
    <string name="operar">Seleccione el metodo de la operacion</string>
    <string name="suma">Sumar</string>
    <string name="resta">Restar</string>
    <string name="operacion">Operar</string>
</resources>
