<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.johnny.a5_calculadoracheckb.MainActivity">

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero1"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/operar" />

    <CheckBox
        android:id="@+id/ckbSuma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suma" />

    <CheckBox
        android:id="@+id/chkResta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resta" />

    <Button
        android:id="@+id/btnOperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="operar"
        android:text="@string/operacion" />


</LinearLayout>
